# alas

./: .gitignore  Cargo.toml  Makefile  README.md  cross.toml  dbus.md  justfile  out.xml  settings.rs
.github/workflows/: rust.yml
alas/: .prettierrc.json  BLOCKING_OPERATIONS_FIX.md  Cargo.toml  Cross.toml  Makefile  alas.service  claude.md  dbus.md  engarde-client.service  engarde.yml  justfile  settings.rs  setup.sh
alas/alas/: Cargo.toml
alas/alas/src/: main.rs  web_server.rs
alas/alas/src/lcd_display/: home_screen.rs  ip_screen.rs  matrix_orbital.rs  menu_screen.rs  mod.rs  screen.rs  status_screen.rs  upload_progress.rs
alas/alas/src/web_server/: auth.rs  config.rs  mod.rs  status.rs
alas/alas_lib/: Cargo.toml
alas/alas_lib/src/: audio.rs  cellular.rs  config.rs  dropbox.rs  lib.rs  modem_manager.rs  network_manager.rs  redundancy.rs  state.rs  utils.rs  webhook.rs  wifi.rs
alas/frontend/: index.html  package-lock.json  package.json  vite.config.ts
alas/src/: main.rs  web_server.rs
alas_lib/: Cargo.toml
alas_lib/src/: audio.rs  config.rs  lib.rs  modem_manager.rs  network_manager.rs  state.rs  utils.rs  wifi.rs
cad/: Alas-Bottom.step  Alas-Rack Face.step  Alas-Top.step  Alas.20250425-220036.FCBak  Alas.20250426-014951.FCBak  Alas.20250428-185445.FCBak  Alas.20250612-220723.FCBak  Alas.20250709-172534.FCBak  Alas.FCStd  Base.step  Base2.step  Bottom3.step  Face.step  Face2.step  Face3.step  Multipart - Flat.FCStd  Multipart-Bottom.step  Multipart.20250201-151023.FCBak  Multipart.20250303-165405.FCBak  Multipart.20250303-170158.FCBak  Multipart.20250303-172309.FCBak  Multipart.20250323-163400.FCBak  Multipart.FCStd  New Top.FCStd  Top.step  Top2.step  Top3.step  v0.20250410-233356.FCBak  v0.FCStd
cm5/: #auto_saved_files#  BOM\CM5IO.csv  CM5IO.kicad_pcb  CM5IO.kicad_prl  CM5IO.kicad_pro  CM5IO.kicad_sch  CM5IO.step  CM5_GPIO.kicad_sch  CM5_HighSpeed.kicad_sch  PCIe-M2.kicad_sch  README.md  audio.kicad_sch  bom.xls  changelog 2.md  fp-info-cache  fp-lib-table  input_buffer.kicad_sch  sym-lib-table
cm5/AlasIO/: CM5IO.kicad_pcb  CM5IO.kicad_prl  CM5_GPIO.kicad_sch  CM5_HighSpeed.kicad_sch  PCIe-M2.kicad_sch  changelog 2.md  fp-info-cache  fp-lib-table
cm5/BOM/: CM5IO-all.xyrs
cm5/CM5IO/: CM5IO.kicad_pcb  CM5IO.kicad_prl  CM5IO.kicad_pro  CM5IO.kicad_sch  CM5_GPIO.kicad_sch  _autosave-CM5IO.kicad_prl  fp-info-cache
cm5/CM5IO_jake_v0/: CM5IO.kicad_pcb  CM5IO.kicad_prl  CM5IO.kicad_pro  CM5_HighSpeed.kicad_sch  PCIe-M2.kicad_sch  fp-info-cache
cm5/CM5IO_jake_v1/: CM5IO.kicad_pcb  CM5IO.kicad_prl  CM5IO.kicad_pro  CM5_GPIO.kicad_sch  CM5_HighSpeed.kicad_sch
cm5/Logo Footprints/: Alas.kicad_mod
cm5/Potentially in a good state/: CM5IO.kicad_pcb  CM5IO.kicad_prl  CM5IO.kicad_sch
cm5/fix_bom/: fix_bom.py  main.py  pyproject.toml
cm5/jlcpcb/: project.db
core/: Cargo.toml
core/src/: audio.rs  config.rs  lib.rs  network_manager.rs  (+1 more)
display_setup/: pyproject.toml  setup_display.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
pcm1863/: pcm1863.dts
server/: README.md  install.sh
web/: Cargo.toml
(+116 files in other folders)
