[package]
name = "alas_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
zbus = { version = "5.1.1", default-features = false, features = ["tokio"] }
tokio = { version = "1.41.1", features = ["full"] }
uuid = {  version = "1.11.0", features = ["v4"] }
serde = { version = "1.0.215", features = ["derive"] }
cpal = { version = "0.15.3" }
serde_json = "1.0.133"
