[package]
name = "alas_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
zbus = { version = "5.1.1", default-features = false, features = ["tokio"] }
tokio = { version = "1.41.1", features = ["full"] }
uuid = {  version = "1.11.0", features = ["v4"] }
serde = { version = "1.0.215", features = ["derive"] }
cpal = { version = "0.15.3" }
serde_json = "1.0.133"
chrono = "0.4.39"
bus = "2.4.1"

# Opus encoding
#opus = "0.3.0"
#ogg-opus = "0.1.2"
#dasp_sample = "0.11.0"

# mp3 encoding
mp3lame-encoder = "0.2.1"

# Icecast
shout = "0.2.1"
futures = "0.3.31"
