[package]
name = "alas"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.215"
alas_lib = { path = "../alas_lib" }
tokio = "1.41.1"
#sentry = "0.35.0"
serde_yaml = { version = "0.9", features = [] }
serialport = "4.6.1"
get_if_addrs = "0.5.3"
udev = "0.9.3"
chrono = "0.4.39"
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
rand = "0.8.5"
rocket_cors = "0.6.0"
dropbox-sdk = {  version = "0.19.1", features=["default_client"] }
uuid = { version = "1.11.0", features = ["v4"] }
