[package]
name = "alas_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
zbus = { version = "5.1.1", default-features = false, features = ["tokio"] }
tokio = { version = "1.41.1", features = ["full"] }
uuid = {  version = "1.11.0", features = ["v4"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
cpal = { version = "0.15.3" }
futures = "0.3.31"

chrono = "0.4.39"
bus = "2.4.1"

# Opus encoding
#opus = "0.3.0"
#ogg-opus = "0.1.2"
#dasp_sample = "0.11.0"

# mp3 encoding
mp3lame-encoder = "0.2.1"

# Icecast
shout = "0.2.1"
dropbox-sdk = {  version = "0.19.1", features=["async_routes", "default_async_client"] }
bytes = "1.8.0"

# Wireguard
defguard_wireguard_rs = "0.7.5"
ipnet = "2.9"
thiserror = "1.0"
log = "0.4"
base64 = "0.21"

# Engarde
serde_yaml = "0.9.34+deprecated"

# Silly to have to need this here
rocket = { version = "0.5.1", features = ["json"] }

# HTTP client for webhooks
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
